src/objects/actionHub__EventQueue__c.object
<CustomObject>
    <description>actionHub Event Queue</description>
    <fields>
        <fullName>actionHub__RelaxedExecution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Relaxed Execution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>actionHub__SourceConnectionId__c</fullName>
        <label>Source Connection Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__SourceConnection__c</fullName>
        <label>Source Connection</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__SourceObjectAPIName__c</fullName>
        <label>Source Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__SourceObjectDisplayName__c</fullName>
        <label>Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__SourceRecordId__c</fullName>
        <label>Source Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COMPLETED</fullName>
                </value>
                <value>
                    <fullName>FAILED</fullName>
                </value>
                <value>
                    <fullName>NEW</fullName>
                </value>
                <value>
                    <fullName>PREQUEUE</fullName>
                </value>
                <value>
                    <fullName>RETRY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event Queue</label>
    <listViews>
        <fullName>actionHub__AllEvents</fullName>
        <columns>NAME</columns>
        <columns>actionHub__Status__c</columns>
        <columns>actionHub__RelaxedExecution__c</columns>
        <columns>actionHub__SourceConnection__c</columns>
        <columns>actionHub__SourceObjectDisplayName__c</columns>
        <columns>actionHub__SourceRecordId__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Events</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Event Queue Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>